# iRM_Embedded_2018

./: .cproject  .gitignore  .gitmodules  .mxproject  .project  CMakeLists.txt  Doxyfile  Makefile  README.md  STM32F427IIHx_FLASH.ld  STM32F427xx.cmake  iRM_Embedded_2018.ioc  iRM_Embedded_2018.txt  iRM_Embedded_2018.xml  st-link-v2-1.cfg  stm32f427.cfg
Configs/: bsp_config.h  engineering.h  hero.h  infantry_1.h  infantry_2.h  infantry_3.h  lib_config.h  sentry.h
Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal_adc.h
Inc/: FreeRTOSConfig.h  adc.h  bsp_driver_sd.h  ffconf.h  i2c.h  main.h  sd_diskio.h  spi.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h  usart.h
Src/: adc.c  bsp_driver_sd.c  can.c  dma.c  freertos.c  gpio.c  i2c.c  main.c  sd_diskio.c  sdio.c  spi.c  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_TIM.c  stm32f4xx_it.c  system_stm32f4xx.c  tim.c  usart.c
Tasks/: rm_config.h  rm_main.h  rm_rtos.h  task_imu.c  task_imu.h  task_motion.c  task_motion.h  task_referee.c  task_referee.h  task_shoot.c  task_shoot.h  task_test.c  task_test.h  task_tx2.c  task_tx2.h
tutorials/: ARM_TOOLCHAIN.md  COMPILE.md  DEBUG.md  FLASH.md
